# NIDS

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COLLEGE_PROJECT_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GITHUB_PUSH_CHECKLIST.md  GITHUB_READY_SUMMARY.md  GITHUB_STRUCTURE.md  LICENSE  Makefile  PROJECT_REORGANIZATION.md  QUICKSTART.md  README.md  README_ROOT.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_models.py  tox.ini  train_model.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docker-build.yml  release.yml  tests.yml
config/: README.md
docs/: README.md
models/: best_model_name.joblib  feature_names.joblib  mlp_model.joblib  scaler.joblib  svm_model.joblib
src/: README.md  __init__.py  app.py  test_models.py  train_model.py
