[metadata]
name = nids
version = 1.0.0
author = Syed Nawaz Ali
author_email = syedWSD1985@gmail.com
description = Network Intrusion Detection System using Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/syednawazali01/NIDS
project_urls =
    Bug Tracker = https://github.com/syednawazali01/NIDS/issues
    Documentation = https://github.com/syednawazali01/NIDS/wiki
    Source Code = https://github.com/syednawazali01/NIDS
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
install_requires =
    streamlit>=1.0
    pandas>=1.0
    numpy>=1.19
    joblib>=1.0
    scikit-learn>=1.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.12
    black>=21.0
    flake8>=3.9
    pylint>=2.10
    bandit>=1.7
scapy =
    scapy>=2.4

[options.packages.find]
where = .
include = *
exclude =
    tests
    tests.*
    docs
    docs.*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,build,dist,.eggs
ignore = E203,W503,W504
per-file-ignores =
    __init__.py:F401
    tests/*:F401,F811

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
strict_equality = True

[coverage:run]
branch = True
source = .
omit =
    */tests/*
    */test_*.py
    .venv/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
